# WebAPI

BWFWebAPI/: docker-compose.yaml  pyproject.toml
BWFWebAPI/api/: main.py
BWFWebAPI/api/routers/: routers.py
BWFWebAPI/api/schemas/: schemas.py
